syntax = "proto3";

package todoPackage_V1;

service Todo {
    rpc CreateTodo (TodoItem) returns (TodoItem);
    rpc ReadTodos (VoidNoParam) returns (TodoItems);
    rpc ReadTodosStream (VoidNoParam) returns (stream TodoItem);
}

message VoidNoParam {}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoItems {
    repeated TodoItem items = 1;
}